Three Column Structure Added
Adding 3 column structure to the form
Use "fs-col-3" class for 3 column structure

--- a/index.html
+++ b/index.html
@@ -14,38 +14,40 @@
 </head>
 <body>
 	<form class="formStyler">
-	
-		<div class="fs-ele-wrapper">
-			<label for="item1">Label 1<span>*<span></label>
-
-			<select name="" id="">
-				<option value="">1</option>
-				<option value="">2</option>
-				<option value="">3</option>
-			</select>
-			<input type="hidden" id="item1">
-		</div>
-		<div class="fs-ele-wrapper">
-			<label for="item2">Label 2</label>
-			<input type="hidden" id="item1">
-			<input type="text" id="item2">
-		</div>
-		<div class="fs-ele-wrapper">
-			<label for="item3">Label 3</label>
-			<input type="text" id="item3">
-		</div>
-		<div class="fs-ele-wrapper">
-			<label for="item4">Label 4Label 4Label 4Label 4</label>
-			<input type="text" id="item4">
-		</div>
-		<div class="fs-ele-wrapper">
-			<label for="item5">Label 5</label>
-			<input type="text" id="item5">
-		</div>
-		<div class="fs-ele-wrapper">
-			<label for="item6">Label 6</label>
-			<input type="text" id="item6">
-		</div>
+		<fieldset>
+			<legend>Form Styler</legend>
+			<div class="fs-ele-wrapper">
+				<label for="item1">Label 1<span>*<span></label>
+			
+				<select name="" id="">
+					<option value="">1</option>
+					<option value="">2</option>
+					<option value="">3</option>
+				</select>
+				<input type="hidden" id="item1">
+			</div>
+			<div class="fs-ele-wrapper">
+				<label for="item2">Label 2</label>
+				<input type="hidden" id="item1">
+				<input type="text" id="item2">
+			</div>
+			<div class="fs-ele-wrapper">
+				<label for="item3">Label 3</label>
+				<input type="text" id="item3">
+			</div>
+			<div class="fs-ele-wrapper">
+				<label for="item4">Label 4Label 4Label 4Label 4</label>
+				<input type="text" id="item4">
+			</div>
+			<div class="fs-ele-wrapper">
+				<label for="item5">Label 5</label>
+				<input type="text" id="item5">
+			</div>
+			<div class="fs-ele-wrapper">
+				<label for="item6">Label 6</label>
+				<input type="text" id="item6">
+			</div>
+		</fieldset>
 	</form>
 </body>
 </html>
