--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<script type="text/javascript" src="js/formStyler.js"></script>
 	<script>
 		$(document).ready(function(){
+			//setting 2 column layout 
 			$('.formStyler').formStyler({columns:2});
 		});
 	</script>
